# 113

./: .gitignore  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
backend/: pom.xml
backend/.claude/: settings.local.json
backend/src/main/java/com/dormsecurity/: DormSecurityApplication.java
backend/src/main/java/com/dormsecurity/config/: CorsConfig.java  DataInitializer.java  JwtAuthFilter.java  MqttConfig.java  SecurityConfig.java  WebSocketConfig.java
backend/src/main/java/com/dormsecurity/controller/: AlarmController.java  AuthController.java  AuthorizedCardController.java  RemoteController.java  RfidController.java  SensorDataController.java  ThresholdController.java
backend/src/main/resources/: application.yml
backend/src/main/resources/certs/: ca.crt
backend/src/main/resources/db/: schema.sql
certs/: server.crt
esp32/: CMakeLists.txt  partitions.csv  platformio.ini
esp32/src/: CMakeLists.txt  aes_crypto.c  aes_crypto.h  authorized_cards.h  buzzer.c  buzzer.h  config.h  dht_sensor.c  dht_sensor.h  idf_component.yml  main.c  mqtt_manager.c  pir_sensor.c  rfid_reader.c  servo_control.c  wifi_manager.c  wifi_manager.h
frontend/AppScope/: app.json5
frontend/AppScope/resources/base/element/: string.json
frontend/entry/src/main/ets/common/: AuthUtil.ets
frontend/entry/src/main/ets/pages/: Index.ets  LoginPage.ets  RegisterPage.ets
src/: CMakeLists.txt  buzzer.c  config.h  dht_sensor.c  main.c  mqtt_manager.c  mqtt_manager.h  pir_sensor.c  pir_sensor.h  rfid_reader.c  rfid_reader.h  servo_control.c  servo_control.h
(+20 files in other folders)
